--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,68 +1,46 @@
-.header {
-	width: 100%;
-	min-width: 100;
-	height: 6rem;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	min-height: fit-content;
-	border-bottom: 1px solid rgba(128, 128, 128, 0.1);
-	z-index: 999;
-	h1:hover {
-		cursor: pointer;
+
+@keyframes animate-fade {
+	0% {
+			background-color: var(--blue);
 	}
-	
-	.headerInfo {
-		display: none;
-		align-items: center;
-		justify-content: space-between;
-		width: 30vw;
-		min-width: 23rem;
-		:hover {
-			cursor: pointer;
-			text-decoration: underline;
-		}
-		a {
-			display: flex;
-			align-items: center;
-			gap: 5px;
-			letter-spacing: 2px;
-			span {
-				text-align: center;
-			}
-		}
-	}
-	
+	100% { opacity: 1; }
 }
 
-.titleWrapper {
+.container {
+	width: 100vw;
+	height: 100vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	flex-direction: column;
 	gap: 20px;
-	padding-top: 25px;
-	
-	.title {
-		background-color: var(--secondary-color);
-		padding: 0 10px;
-		border-radius: 5px;
+	background-color: var(--dark-blue);
+	animation-duration: 3s;
+	animation-name: animate-fade;
+	animation-fill-mode: backwards;
 
-		span {
-			color: var(--yellow);
+	.logo {
+		@media (max-width: 700px) {
+			width: 300px;
+			height: 300px;
 		}
 	}
 }
 
-@media (min-width: 750px) {
-	.header {
-		position: fixed;
-		justify-content: space-around;
-		.headerInfo {
-			display: flex;
-		}		
-	}
+.loginButton {
+	width: 310px;
+	height: 85px;
+	background-color: rgba(0, 0, 0, 0.16);
+	border-radius: 40px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-weight: 700;
+	letter-spacing: 6px;
 
-	.titleWrapper {
-		padding-top: 100px;
+	@media (max-width: 700px) {
+		width: 200px;
+		height: 55px;
+		letter-spacing: 4px;
 	}
 }
