--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,9 +4,9 @@
 }
 
 :root {
- --main-color: #14405a;
- --secondary-color: #0d2a3b;
- --dark-blue: #0e1f29;
+ --blue: #1A48AF;
+ --light-blue: #48DAE8;
+ --dark-blue: #1A2E45;
  --yellow: #ffd969;
  --ice: #f3f3f3;
 }
@@ -16,25 +16,9 @@ body {
   max-width: 100vw; 
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
 a {
   color: inherit;
   text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
 }
 
 h1 {
@@ -59,39 +43,12 @@ p {
 }
 body {
 	margin: 0;
-	font-family: 'Prompt', sans-serif;
+	font-family: 'Outfit', sans-serif;
 	color: white;
 	background: var(--main-color);
 	overflow-x: hidden;
 }
 
-section {
-	position: relative;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	min-height: 400px;
-	margin-top: 50px;
-}
-
 .backgroundImages {
 	opacity: 0.3;
-}
-
-.bubble::after {
-	content: '';
-	border-top-left-radius: 100% 10%;
-	border-top-right-radius: 100% 10%;
-	position: absolute;
-	bottom: 0;
-	padding: 40px 0;
-	z-index: -1;
-	width: 100%;
-	background-color: var(--dark-blue);
-	height: 100%;
-	
-	@media (min-width: 1000px) {
-		border-top-left-radius: 100% 40%;
-		border-top-right-radius: 100% 40%;
-	}
 }
