feat: changed layout

--- a/styles/components/card.module.scss
+++ b/styles/components/card.module.scss
@@ -1,12 +1,12 @@
 .cardWrapper {
-	width: 265px;
-	height: 200px;
+	min-width: 200px;
+	min-height: 170px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: space-evenly;
-	background-color: var(--ice);
-	color: var(--main-color);
+	background-color: var(--off-white);
+	color: var(--dark-blue);
 	box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 	border-radius: 20px;
 }
