--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -7,8 +7,8 @@
  --blue: #1A48AF;
  --light-blue: #48DAE8;
  --dark-blue: #1A2E45;
- --yellow: #ffd969;
- --ice: #f3f3f3;
+ --pink: #FF2768;
+ --off-white: #FDFDFD;
 }
 
 html,
