--- a/styles/views/cards.module.scss
+++ b/styles/views/cards.module.scss
@@ -1,7 +1,9 @@
 .cardsWrapper {
+	width: 100%;
+	height: 100%;
 	display: flex;
-	justify-content: center;
-	align-items: center;
-	gap: 50px;
 	flex-wrap: wrap;
+	justify-content: space-evenly;
+	align-items: center;
+	row-gap: 50px;
 }
