feat: changed layout

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -37,6 +37,7 @@
 	justify-content: center;
 	font-weight: 700;
 	letter-spacing: 6px;
+	margin-bottom: 10vh;
 
 	@media (max-width: 700px) {
 		width: 200px;
