feat: changed layout

--- a/styles/curso/secondView.module.scss
+++ b/styles/curso/secondView.module.scss
@@ -1,10 +1,18 @@
 .secondView {
 	min-height: 100vh;
 	background-color: var(--blue);
-	padding: 20px 15vw;	
+	padding: 100px 300px;	
 	display: flex;
 	flex-direction: column;
-	gap: 20px;
+	gap: 50px;
 	justify-content: center;
 	align-items:  center;
+	.cardsWrapper {
+		display: flex;
+		justify-content: space-evenly;
+		align-items: stretch;
+		width: 100%;
+		flex-wrap: wrap;
+		gap: 50px;
+	}
 }
