--- a/styles/curso/thirdView.module.scss
+++ b/styles/curso/thirdView.module.scss
@@ -1,4 +1,9 @@
 .thirdView {
-	width: 100vw;
 	min-height: 100vh;
+	padding: 100px 300px;	
+	display: flex;
+	flex-direction: column;
+	gap: 50px;
+	justify-content: center;
+	align-items:  center;
 }
