--- a/styles/curso/fourthView.module.scss
+++ b/styles/curso/fourthView.module.scss
@@ -1,5 +1,36 @@
 .fourthView {
-	display: flex;
-	width: 100vw;
-	height: 100vh;
+		height: 100vh;
+		width: 100vw;
+		display: flex;
+		justify-content: space-evenly;
+		align-items:  center;
+		background-color: var(--dark-blue);
+		
+		@media (max-width: 800px) {
+			flex-direction: column;
+			gap: 20px;
+		}
+
+		.card {
+			height: 60vh;
+			width:30vw;
+			background-color: var(--off-white);
+			border-radius: 20px;
+			border: 3px solid var(--blue);
+			color: var(--dark-blue);
+			display: flex;
+			flex-direction: column;
+			justify-content: space-around;
+			align-items: center;
+			
+			@media (max-width: 800px) {
+				height: 40vh;
+				width: 90%;
+			}
+
+			h2:nth-child(2) {
+				text-shadow: 1px 2px var(--pink);
+				font-size: 4rem;
+			}
+		}
 }
