--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -52,3 +52,11 @@ body {
 .backgroundImages {
 	opacity: 0.3;
 }
+
+.flyingObject {
+	width: '50px';
+	height: '50px';
+	background-color: 'yellow';
+	position: 'fixed';
+	bottom: '0';
+}
