--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -44,7 +44,7 @@ p {
 body {
 	margin: 0;
 	font-family: 'Outfit', sans-serif;
-	color: white;
+	color: var(--dark-blue);
 	background: var(--main-color);
 	overflow-x: hidden;
 }
