--- a/styles/components/checked.module.scss
+++ b/styles/components/checked.module.scss
@@ -5,4 +5,12 @@
 	color: var(--dark-blue);
 	font-weight: 700;
 	letter-spacing: 2.2px;
+	svg {
+		min-width: 10rem;
+	}
+	@media (max-width:700px) {
+			svg {
+				display: none;
+			}
+	}
 }
