--- a/styles/curso/curso.module.scss
+++ b/styles/curso/curso.module.scss
@@ -31,3 +31,74 @@
 		}
 	}
 }
+
+.subjectsAbordedWrapper {
+	height: 100vh;
+	padding: 20px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+	@media (min-width: 700px) {
+		flex-direction: row;
+	}
+
+	.subjectCard {
+		width: 100%;
+		height: 100%;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: space-around;
+
+			.bePartOf {
+				border-radius: 20px;
+				padding: 0 20px ;
+				text-shadow: 4px 3px 0px rgb(20, 255, 20);
+			}
+			.waranty {
+				text-shadow: 4px 3px 3px var(--pink);
+				color: transparent
+			}
+			p {
+				color: var(--dark-blue);
+				text-shadow: 1px 1px 1px var(--blue);
+
+			}
+		}
+	}
+	.prizes {
+		background-color: var(--dark-blue);
+		height: 100vh;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-around;
+		align-items: center;
+		h2 {
+			color: var(--off-white);
+		}
+		@media screen and (min-width: 700px) {
+			flex-direction: row;
+		}
+		.card {
+			h2 {
+				color: var(--dark-blue);
+			}
+			height: 60vh;
+			width:30vw;
+			background-color: var(--off-white);
+			border-radius: 20px;
+			border: 3px solid var(--blue);
+			color: var(--dark-blue);
+			display: flex;
+			flex-direction: column;
+			justify-content: space-around;
+			align-items: center;
+			
+			@media (max-width: 800px) {
+				height: 40vh;
+				width: 90%;
+			}
+		}
+
+}
