--- a/styles/curso/fourthView.module.scss
+++ b/styles/curso/fourthView.module.scss
@@ -1,11 +1,14 @@
 .fourthView {
+	border-top: 60px solid white;
 		height: 100vh;
 		width: 100vw;
 		display: flex;
 		justify-content: space-evenly;
 		align-items:  center;
 		background-color: var(--dark-blue);
+		color: var(--off-white);
 		
+
 		@media (max-width: 800px) {
 			flex-direction: column;
 			gap: 20px;
