--- a/styles/curso/secondView.module.scss
+++ b/styles/curso/secondView.module.scss
@@ -1,12 +1,15 @@
 .secondView {
 	min-height: 100vh;
-	background-color: var(--blue);
+	background-color: var(--off-white);
 	padding: 100px 20px;	
 	display: flex;
 	flex-direction: column;
 	gap: 50px;
 	justify-content: center;
 	align-items:  center;
+	h2 {
+		color: var(--dark-blue);
+	}
 	@media (min-width: 1150px) {
 		padding: 100px 300px;	
 	}
@@ -17,5 +20,13 @@
 		width: 100%;
 		flex-wrap: wrap;
 		gap: 50px;
+		.card {
+			width: 100%;
+			height: 100%;
+			display: flex;
+			justify-content: space-evenly;
+			align-items: center;
+			flex-direction: column;
+		}
 	}
 }
