--- a/styles/curso/thirdView.module.scss
+++ b/styles/curso/thirdView.module.scss
@@ -2,6 +2,11 @@
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: space-evenly;
 	align-items:  center;
+	padding: 10px 20px;
+
+	h2 {
+		margin-bottom: 10px;
+	}
 }
