--- a/styles/views/checks.module.scss
+++ b/styles/views/checks.module.scss
@@ -2,10 +2,10 @@
 	display: flex;
 	width: 100%;
 	height: 100%;
-	justify-content: space-evenly;
+	justify-content: space-around;
 	img {
 		display: none;
-		@media (min-width: 750px) {
+		@media (min-width: 700px) {
 			display: flex;
 			align-self: center;
 		}
@@ -17,5 +17,8 @@
 		flex-direction: column;
 		justify-content: space-evenly;
 		gap: 25px;
+		@media (min-width: 700px) {
+			width: 50%;
+		}
 	}
 }
