--- a/styles/curso/fourthView.module.scss
+++ b/styles/curso/fourthView.module.scss
@@ -32,7 +32,7 @@
 			}
 
 			h2:nth-child(2) {
-				text-shadow: 1px 2px var(--pink);
+				text-shadow: 4px 3px 0px rgb(20, 255, 20);
 				font-size: 4rem;
 			}
 		}
