--- a/styles/views/checks.module.scss
+++ b/styles/views/checks.module.scss
@@ -2,7 +2,7 @@
 	display: flex;
 	width: 100%;
 	height: 100%;
-	justify-content: space-around;
+	justify-content: space-evenly;
 	img {
 		display: none;
 		@media (min-width: 700px) {
