--- a/styles/curso/curso.module.scss
+++ b/styles/curso/curso.module.scss
@@ -5,7 +5,7 @@
 	width: 100vw;
 	height: 500vh;
 	background-color: var(--off-white);
-	
+	scroll-snap-type: y mandatory;
 }
 .navbar {
 	display: flex;
@@ -66,12 +66,15 @@
 			}
 			p {
 				color: var(--dark-blue);
-				text-shadow: 1px 1px 1px var(--blue);
-
 			}
 		}
 	}
 	.prizes {
+		border-top-left-radius: 70px;
+		border-top-right-radius: 70px;
+		padding-top: 50px;
+		padding-left: 20px;
+		padding-right: 20px;
 		background-color: var(--dark-blue);
 		height: 100vh;
 		display: flex;
@@ -80,28 +83,34 @@
 		align-items: center;
 		h2 {
 			color: var(--off-white);
+			margin-bottom: 10px;
 		}
-		@media screen and (min-width: 700px) {
-			flex-direction: row;
-		}
-		.card {
-			h2 {
-				color: var(--pink);
-			}
-			height: 60vh;
-			width:30vw;
-			background-color: var(--off-white);
-			border-radius: 20px;
-			border: 3px solid var(--blue);
-			color: var(--dark-blue);
+		.cardsWrapper {
 			display: flex;
 			flex-direction: column;
-			justify-content: space-around;
-			align-items: center;
-			
-			@media (max-width: 800px) {
-				height: 40vh;
-				width: 90%;
+			gap: 20px;
+			@media screen and (min-width: 800px) {
+				flex-direction: row;
+			}
+			.card {
+				h2 {
+					color: var(--pink);
+				}
+				height: 60vh;
+				width:30vw;
+				background-color: var(--off-white);
+				border-radius: 20px;
+				border: 3px solid var(--blue);
+				color: var(--dark-blue);
+				display: flex;
+				flex-direction: column;
+				justify-content: space-around;
+				align-items: center;
+				
+				@media (max-width: 800px) {
+					height: 40vh;
+					width: 50vw;
+				}
 			}
 		}
 
