--- a/styles/curso/fourthView.module.scss
+++ b/styles/curso/fourthView.module.scss
@@ -1,39 +1,46 @@
 .fourthView {
-	border-top: 60px solid white;
+	padding: 50px 0;
 		height: 100vh;
 		width: 100vw;
 		display: flex;
+		flex-direction: column;
 		justify-content: space-evenly;
 		align-items:  center;
 		background-color: var(--dark-blue);
 		color: var(--off-white);
+
 		
-
-		@media (max-width: 800px) {
-			flex-direction: column;
-			gap: 20px;
-		}
-
-		.card {
-			height: 60vh;
-			width:30vw;
-			background-color: var(--off-white);
-			border-radius: 20px;
-			border: 3px solid var(--blue);
-			color: var(--dark-blue);
+		.cardsWrapper {
 			display: flex;
-			flex-direction: column;
-			justify-content: space-around;
-			align-items: center;
-			
+			gap: 20px;
 			@media (max-width: 800px) {
-				height: 40vh;
-				width: 90%;
+				flex-direction: column;
 			}
 
-			h2:nth-child(2) {
-				text-shadow: 4px 3px 0px rgb(20, 255, 20);
-				font-size: 4rem;
+			.card {
+				height: 60vh;
+				width:30vw;
+				background-color: var(--off-white);
+				border-radius: 20px;
+				border: 3px solid var(--blue);
+				color: var(--dark-blue);
+				display: flex;
+				flex-direction: column;
+				justify-content: space-around;
+				align-items: center;
+				
+				@media (max-width: 800px) {
+					height: 40vh;
+					width: 50vw;
+				}
+	
+				h2:nth-child(2) {
+					text-shadow: 4px 3px 0px rgb(20, 255, 20);
+					font-size: 3rem;
+					@media (min-width: 800px) {
+						font-size: 5rem;
+					}
+				}
 			}
 		}
 }
