--- a/styles/curso/secondView.module.scss
+++ b/styles/curso/secondView.module.scss
@@ -27,6 +27,10 @@
 			justify-content: space-evenly;
 			align-items: center;
 			flex-direction: column;
+			p {
+				font-size: 1.2rem;
+				font-weight: 600;
+			}
 		}
 	}
 }
