--- a/styles/curso/fourthView.module.scss
+++ b/styles/curso/fourthView.module.scss
@@ -31,11 +31,12 @@
 				
 				@media (max-width: 800px) {
 					height: 40vh;
-					width: 50vw;
+					width: 80vw;
 				}
 	
 				h2:nth-child(2) {
 					text-shadow: 4px 3px 0px rgb(20, 255, 20);
+					text-decoration: underline;
 					font-size: 3rem;
 					@media (min-width: 800px) {
 						font-size: 5rem;
