--- a/styles/curso/firstView.module.scss
+++ b/styles/curso/firstView.module.scss
@@ -1,6 +1,6 @@
 .firstView {
 	position: relative;
-	min-height: 100vh;
+	min-height: 65vh;
 	display: flex;
 	flex-direction: column;
 	padding: 0 20px;
@@ -12,7 +12,8 @@
 		align-items: center;
 		gap: 30px;
 		width: 100%;
-		height: 100vh;
+		height: 65vh;
+		margin-top: 70px;
 		color: var(--dark-blue);
 		font-weight: 700;
 
@@ -21,11 +22,15 @@
 		background-color: var(--blue);
 		color: white;
 		padding: 10px 10px;
-		border-radius: 20px;
-		width: 350px;
+		border-radius: 30px;
+		width: 500px;
+		height: 30px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
 		text-align: center;
-		font-size: larger;
-		@media (max-width: 400px) {
+		font-size: 1.5rem;
+		@media (max-width: 650px) {
 			width: fit-content;
 			font-size: medium;
 		}
