--- a/styles/curso/curso.module.scss
+++ b/styles/curso/curso.module.scss
@@ -104,6 +104,7 @@
 				color: var(--dark-blue);
 				display: flex;
 				flex-direction: column;
+				padding: 0 15px;
 				justify-content: space-around;
 				align-items: center;
 				
