--- a/styles/curso/curso.module.scss
+++ b/styles/curso/curso.module.scss
@@ -37,7 +37,7 @@
 
 .subjectsAbordedWrapper {
 	height: 100vh;
-	padding: 20px;
+	padding: 0 15vw;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-evenly;
