--- a/styles/curso/curso.module.scss
+++ b/styles/curso/curso.module.scss
@@ -116,3 +116,48 @@
 		}
 
 }
+
+.footerContainer {
+	margin-top: 100px;
+	position: relative;
+	width: 100%;
+	height: 100%;
+	min-height: 20vh;
+	background-color: rgba(#1A48AF, .5);
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
+
+	@media (min-width:700px) {
+		flex-direction: row;
+	}
+	
+	>div {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: flex-start;
+		min-height: 20vh;
+		padding-top: 10vh;
+		height: 100%;
+		gap: 20px;
+		>a {
+			display: flex;
+			letter-spacing: 2px;
+			font-size: small;
+			gap: 20px;
+			@media (min-width:700px) {
+				font-size: large;
+			}
+		}
+	}
+	>span {
+		position: absolute;
+		bottom: 10px;
+		left: 50%;
+		transform: translate(-50%);
+		font-size: small;
+		opacity: .5;
+	}
+}
