--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -32,6 +32,7 @@ h1 {
 h2 {
 	font-size: 1.8rem;
 	text-align: center;
+	overflow-wrap: break-word;
 	@media (min-width: 750px) {
 		font-size: 3rem;
 	}
