--- a/styles/curso/curso.module.scss
+++ b/styles/curso/curso.module.scss
@@ -144,10 +144,10 @@
 		gap: 20px;
 		>a {
 			display: flex;
-			letter-spacing: 2px;
 			font-size: small;
-			gap: 20px;
+			gap: 10px;
 			@media (min-width:700px) {
+				letter-spacing: 2px;
 				font-size: large;
 			}
 		}
@@ -157,7 +157,7 @@
 		bottom: 10px;
 		left: 50%;
 		transform: translate(-50%);
-		font-size: small;
+		font-size: x-small;
 		opacity: .5;
 	}
 }
