feat: changed email and color of instagram

--- a/styles/curso/curso.module.scss
+++ b/styles/curso/curso.module.scss
@@ -27,7 +27,8 @@
 		display: flex;
 		align-items: center;
 		gap: 10px;
-
+		color: var(--off-white);
+		
 		p {
 			font-size: 15px;
 			font-weight: 500;
