--- a/styles/landing/landing.module.scss
+++ b/styles/landing/landing.module.scss
@@ -6,23 +6,28 @@
     max-width: 1600px;
 
     .header {
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
         height: 10vh;
         width: 100%;
 
-        .active {
-            text-decoration: underline;
+        .wideHeader {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            .active {
+                text-decoration: underline;
+            }
+    
+            >h1 {
+                font-size: 2rem;
+            }
+    
+            >p {
+                font-size: 1.5rem;
+            }
         }
 
-        >h1 {
-            font-size: 2rem;
-        }
-
-        >p {
-            font-size: 1.5rem;
-        }
     }
 
     .body {
@@ -83,15 +88,48 @@
                 &:nth-child(2) {
                     right: 5%;
                 }
-                @media screen and (max-width: 1000px) {
-                    &:nth-child(1) {
-                        display: none;
-                    }
-                    right: -80px;
-                    bottom: -27px;
-                }
             }
-
+            .smallImage {
+                display: none;
+            }
+            
         }
     }
+    
+    @media screen and (max-width: 1000px) {
+        .body {
+            .imagesContainer {
+                :nth-child(1) {
+                    display: none;
+                }
+                right: -80px;
+                bottom: -27px;
+            }
+        }
+    }
+
+    @media screen and (max-width: 810px) {
+        .header {
+            .wideHeader {
+                display: none;
+            }
+        }
+        .body {
+            .imagesContainer {
+                right: -80px;
+                bottom: -27px;
+                :nth-child(2) {
+                    display: none;
+                }
+                .smallImage {
+                    position: inherit;
+                    display: block;
+                    top: 30%;
+                    right: 5%;
+                }
+            }
+        }
+
+    }
 }
+
