--- a/styles/landing/landing.module.scss
+++ b/styles/landing/landing.module.scss
@@ -1,135 +1,203 @@
 .container {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 100vw;
+    max-width: 1300px;
     height: 100vh;
-    max-width: 1600px;
-
     .header {
-        height: 10vh;
-        width: 100%;
-
         .wideHeader {
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: space-evenly;
-            align-items: center;
-            .active {
-                text-decoration: underline;
-            }
-    
-            >h1 {
-                font-size: 2rem;
-            }
-    
-            >p {
-                font-size: 1.5rem;
-            }
+            display: none;
         }
 
+        .smallHeader {
+            display: flex;
+            width: 100%;
+            height: 10%;
+            justify-content: flex-end;
+        }
     }
 
     .body {
         display: flex;
-        width: 100%;
-        height: 90vh;
+        flex-direction: column;
         align-items: center;
-        justify-content: space-evenly;
-        padding: 0 10%;
-
+        height: 100%;
         .presentation {
-            width: 100%;
             height: 100%;
             display: flex;
-            align-items: flex-start;
-            justify-content: center;
             flex-direction: column;
-            >h2 {
-                text-align: left;
-            }
-            >span {
-                font-size: 2.1rem;
-            }
-            >p {
-                text-align: left;
-                line-height: 2rem !important;
-                color: #676767;
-                max-width: 45%;
-                font-size: 1.5rem;
+            align-items: center;
+            justify-content: space-evenly;
+
+            .text {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                width: 60%;
+
+                .title {
+                    font-size: 2rem;
+                    font-weight: 700;
+                    color: var(--dark-blue);
+                    margin-bottom: 1rem;
+                }
+    
+                .subtitle {
+                    font-size: 1rem;
+                    font-weight: 400;
+                    color: #848484;
+                    margin-bottom: 1rem;
+                }
             }
 
-            >button {
-                margin-top: 7%;
-                border: 0 solid;
-                border-radius: 20px;
-                width: 212px;
-                height: 65px;
-                background: var(--blue);
-                box-shadow: 0px 8px 30px rgba(0, 0, 0, 0.25);
-                font-family: 'Outfit', sans-serif;
-                font-size: 1rem;
+
+            .button {
+                width: 10rem;
+                height: 3rem;
+                background-color: #000000;
                 color: var(--off-white);
-                &:hover{
-                    cursor: pointer;
-                    background: var(--dark-blue);
+                border: none;
+                border-radius: 0.5rem;
+                font-size: 1rem;
+                font-weight: 700;
+                cursor: pointer;
+                transition: 0.5s;
+                &:hover {
+                    background-color: #ffffff;
+                    color: #000000;
                 }
             }
         }
 
-        .imagesContainer {
-            display: block;
-            >img {
-                position: absolute;
-                z-index: -1;
-                right: 0;
-                bottom: 0;
-
-                &:nth-child(2) {
-                    right: 5%;
-                }
-            }
-            .smallImage {
+        .circleImage {
+            display: none;
+        }
+        .phImage {
                 display: none;
+            }
+    }
+
+    @media screen and (min-width: 768px) {
+        .header {
+            width: 100vw;
+            height: 10%;
+            .wideHeader {
+                display: flex;
+                justify-content: space-evenly;
+                align-items: center;
+
+                .active {
+                    text-decoration: underline var(--blue);
+                }
             }
             
-        }
-    }
-    
-    @media screen and (max-width: 1000px) {
-        .body {
-            .imagesContainer {
-                :nth-child(1) {
-                    display: none;
-                }
-                right: -80px;
-                bottom: -27px;
-            }
-        }
-    }
-
-    @media screen and (max-width: 810px) {
-        .header {
-            .wideHeader {
+            .smallHeader {
                 display: none;
             }
         }
+    
         .body {
-            .imagesContainer {
-                right: -80px;
-                bottom: -27px;
-                :nth-child(2) {
+            .presentation {
+                flex-direction: row;
+                justify-content: flex-start;
+                margin-left: 10%;                
+                
+                .smallImage {
                     display: none;
                 }
-                .smallImage {
-                    position: inherit;
-                    display: block;
-                    top: 30%;
-                    right: 5%;
+
+                .text {
+                    flex-direction: column;
+                    align-items: flex-start;
+    
+                    .title {
+                        font-size: 2rem;
+                        font-weight: 700;
+                        color: var(--dark-blue);
+                        margin-bottom: 1rem;
+                    }
+        
+                    .subtitle {
+                        text-align: left;
+                        width: 60%;
+                    }
+                }
+    
+    
+                .button {
+                    width: 10rem;
+                    height: 3rem;
+                    background-color: #000000;
+                    color: var(--off-white);
+                    border: none;
+                    border-radius: 0.5rem;
+                    font-size: 1rem;
+                    font-weight: 700;
+                    cursor: pointer;
+                    transition: 0.5s;
+                    &:hover {
+                        background-color: #ffffff;
+                        color: #000000;
+                    }
                 }
             }
-        }
-
+    
+            .phImage {
+                display: inline;
+                position: fixed;
+                right: 0;
+                bottom: 0;
+            }
+            }
+        }    
+        @media screen and (min-width: 1000px) {
+            .body {
+                .presentation {
+                    .text {
+                        .title {
+                            font-size: 4rem;
+                            font-weight: 700;
+                            color: var(--dark-blue);
+                            margin-bottom: 1rem;
+                        }
+            
+                        .subtitle {
+                            font-size: 1.5rem;
+                            text-align: left;
+                            width: 60%;
+                        }
+                    }
+        
+        
+                    .button {
+                        width: 10rem;
+                        height: 3rem;
+                        background-color: var(--dark-blue);
+                        color: var(--off-white);
+                        border: none;
+                        border-radius: 0.5rem;
+                        font-size: 1rem;
+                        font-weight: 700;
+                        cursor: pointer;
+                        transition: 0.5s;
+                        &:hover {
+                            background-color: var(--blue);
+                            color: var(--off-white);
+                        }
+                    }
+                }
+        
+                .phImage {
+                    z-index: -1;
+                    right: 10%;
+                }
+                .circleImage {
+                    z-index: -2;
+                    display: inline;
+                    position: fixed;
+                    right: 0;
+                    bottom: 0;
+                }
+            }
+        }          
     }
-}
-
