--- a/styles/landing/landing.module.scss
+++ b/styles/landing/landing.module.scss
@@ -5,15 +5,26 @@
     max-width: 1300px;
     height: 100vh;
     .header {
+        width: 100vw;
+        height: 10%;
         .wideHeader {
             display: none;
         }
 
         .smallHeader {
             display: flex;
-            width: 100%;
-            height: 10%;
-            justify-content: flex-end;
+            justify-content: space-around;
+            align-items: center;
+            height: 100%;
+
+            >h1 {
+                font-size: 1.5rem;
+                font-weight: 700;
+                color: var(--dark-blue);
+            }
+            >svg {
+                margin-top: 5px;
+            }
         }
     }
 
@@ -54,7 +65,7 @@
             .button {
                 width: 10rem;
                 height: 3rem;
-                background-color: #000000;
+                background-color: var(--dark-blue);
                 color: var(--off-white);
                 border: none;
                 border-radius: 0.5rem;
@@ -63,8 +74,8 @@
                 cursor: pointer;
                 transition: 0.5s;
                 &:hover {
-                    background-color: #ffffff;
-                    color: #000000;
+                    background-color: var(--blue);
+                    color: var(--off-white);
                 }
             }
         }
@@ -122,24 +133,6 @@
                         width: 60%;
                     }
                 }
-    
-    
-                .button {
-                    width: 10rem;
-                    height: 3rem;
-                    background-color: #000000;
-                    color: var(--off-white);
-                    border: none;
-                    border-radius: 0.5rem;
-                    font-size: 1rem;
-                    font-weight: 700;
-                    cursor: pointer;
-                    transition: 0.5s;
-                    &:hover {
-                        background-color: #ffffff;
-                        color: #000000;
-                    }
-                }
             }
     
             .phImage {
@@ -165,24 +158,6 @@
                             font-size: 1.5rem;
                             text-align: left;
                             width: 60%;
-                        }
-                    }
-        
-        
-                    .button {
-                        width: 10rem;
-                        height: 3rem;
-                        background-color: var(--dark-blue);
-                        color: var(--off-white);
-                        border: none;
-                        border-radius: 0.5rem;
-                        font-size: 1rem;
-                        font-weight: 700;
-                        cursor: pointer;
-                        transition: 0.5s;
-                        &:hover {
-                            background-color: var(--blue);
-                            color: var(--off-white);
                         }
                     }
                 }
